--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,11 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">Surf the Wave</h1>
+    <div class="container">
+        <div class="row">
+            <div>
+                
+            </div>
+        </div>
+    </div>
 {% endblock %}
