--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/4feda7bc79.js" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_css %}
@@ -35,7 +37,35 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+        <div class="row">
+            <div class="col-4 my-auto py-1">
+                <a href="{% url 'home' %}">
+                    <img src="" alt="Surf the Wave logo">
+                </a>
+            </div>
+            <div class="col-4 my-auto py-2">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-$gray-500" type="text" name="q" placeholder="I am looking for...">
+                        <div class="input-group-append">
+                            <button type="submit" class="form-control btn btn-primary">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-4 my-auto py-1">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item-dropdown"></li>
+                    <li class="list-inline-item"></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
     {% if messages %}
         <div class="message-container"></div>
