--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,32 @@
             </div>
             <div class="col-4 my-auto py-1">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item-dropdown"></li>
-                    <li class="list-inline-item"></li>
+                    <li class="dropdown list-inline-item">
+                        <a class="text-black nav-link" href="#" id="user-options" 
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="" class="dropdown-item">Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i><sup>{{ 0 }}</sup></div>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
