--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,18 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/4feda7bc79.js" crossorigin="anonymous"></script>
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&display=swap" rel="stylesheet">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/4feda7bc79.js" crossorigin="anonymous"></script>
         <!-- Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
@@ -41,15 +45,15 @@
         <div class="row">
             <div class="col-4 my-auto py-1">
                 <a href="{% url 'home' %}">
-                    <img src="" alt="Surf the Wave logo">
+                    <img src="{{ MEDIA_URL }}logo.png" alt="Surf the Wave logo" height="100">
                 </a>
             </div>
             <div class="col-4 my-auto py-2">
                 <form method="GET" action="">
                     <div class="input-group w-100">
-                        <input class="form-control border border-$gray-500" type="text" name="q" placeholder="I am looking for...">
+                        <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q" placeholder="I am looking for...">
                         <div class="input-group-append">
-                            <button type="submit" class="form-control btn btn-primary">
+                            <button type="submit" class="form-control border-0">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
@@ -58,7 +62,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-4 my-auto py-1">
+            <div class="col-3 offset-1 my-auto py-1">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="dropdown list-inline-item">
                         <a class="text-black nav-link" href="#" id="user-options" 
