--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,11 @@
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Space+Grotesk:wght@300;400;500&display=swap"
+            rel="stylesheet">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -42,7 +46,7 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
+        <div class="row bg-white d-none d-lg-flex">
             <div class="col-4 my-auto py-1">
                 <a href="{% url 'home' %}">
                     <img src="{{ MEDIA_URL }}logo.png" alt="Surf the Wave logo" height="100">
@@ -72,13 +76,13 @@
                         <ul class="dropdown-menu" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
+                                    <a href="" class="dropdown-item nav-options">Product Management</a>
                                 {% endif %}
                                 <a href="" class="dropdown-item">Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item nav-options">Logout</a>
                                 {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item nav-options">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item nav-options">Login</a>
                             {% endif %}
                         </ul>
                     </li>
@@ -91,6 +95,20 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+              </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col text-white">
+                <h5 class="headings">Free delivery on orders over £ {{ free_shipping_threshold }}!</h5>
             </div>
         </div>
     </header>
