--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,7 @@
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Space+Grotesk:wght@300;400;500&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Source+Sans+Pro:wght@600;700&family=Space+Grotesk:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
@@ -49,7 +47,7 @@
         <div class="row bg-white d-none d-lg-flex">
             <div class="col-4 my-auto py-1">
                 <a href="{% url 'home' %}">
-                    <img src="{{ MEDIA_URL }}logo.png" alt="Surf the Wave logo" height="100">
+                    <h1 id="logo">Surf the Wave</h1>
                 </a>
             </div>
             <div class="col-4 my-auto py-2">
@@ -66,8 +64,8 @@
                     </div>
                 </form>
             </div>
-            <div class="col-3 offset-1 my-auto py-1">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            <div class="col-3 offset-1 my-auto py-2">
+                <ul class="list-inline list-unstyled text-end my-0">
                     <li class="dropdown list-inline-item">
                         <a class="text-black nav-link" href="#" id="user-options" 
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -89,7 +87,7 @@
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                             href="">
-                            <div class="text-center">
+                            <div class="text-end">
                                 <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i><sup>{{ 0 }}</sup></div>
                             </div>
                         </a>
