Add image gallery to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,46 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <div class="container">
-        <div class="row">
-            <div>
+        <div class="row gallery">
+            <div class="col-12 col-md-6 offset-md-1">
+                <a href="">
+                    <img src="{{ MEDIA_URL }}surfing2-home.jpg" alt="" class="gallery-lg-img">
+                </a>
+            </div>
+            <div class="col-12 col-md-4">
+                <a href="">
+                    <img src="{{ MEDIA_URL }}surfboards-home.jpg" alt="" class="gallery-sm-img">
+                </a>
+                <a href="">
+                    <img src="{{ MEDIA_URL }}ocean-home.jpg" alt="" class="gallery-sm-img">
+                </a>
+            </div>
+        </div>
+        <div class="row gallery">
+            <div class="col-4 offset-1">
+                <a href="">
+                    <img src="{{ MEDIA_URL }}surfboards2-home.jpg" alt="" class="gallery-sm-img">
+                </a>
+                <a href="">
+                    <img src="{{ MEDIA_URL }}wetsuit-home.jpg" alt="" class="gallery-sm-img">
+                </a>
+            </div>
+            <div class="col-6">
+                <a href="">
+                    <img src="{{ MEDIA_URL }}surfing-home.jpg" alt="" class="gallery-lg-img">
+                </a>
             </div>
         </div>
     </div>
