--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top">
-        <div class="row bg-white pt-lg-2 d-none d-lg-flex">
+    <header class="container-fluid fixed-top bg-white">
+        <div class="row pt-lg-2 d-none d-lg-flex">
             <div class="col-4 my-auto py-1">
                 <a href="{% url 'home' %}">
                     <h1 id="logo">Surf the Wave</h1>
