Update responsiveness of image gallery

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,14 +14,14 @@
 {% block content %}
     <div class="container">
         <div class="row gallery">
-            <div class="col-12 col-md-6 offset-md-1">
+            <div class="col-6 offset-1">
                 <a href="">
                     <img src="{{ MEDIA_URL }}surfing2-home.jpg" alt="" class="gallery-lg-img">
                 </a>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-4">
                 <a href="">
-                    <img src="{{ MEDIA_URL }}surfboards-home.jpg" alt="" class="gallery-sm-img">
+                    <img src="{{ MEDIA_URL }}surfboard-van-home.jpg" alt="" class="gallery-sm-img">
                 </a>
                 <a href="">
                     <img src="{{ MEDIA_URL }}ocean-home.jpg" alt="" class="gallery-sm-img">
