--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                 </ul>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid d-none d-lg-block">
                 <hr id="hr-decoration">
         </div>
         <div class="row">
