--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,48 @@ a {
 
 .gallery-lg-img {
     height: 420px;
-} 
+}
+
+.image-container {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image {
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .image-grid-hover {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .image-container:hover .image {
+    opacity: 0.4;
+  }
+  
+  .image-container:hover .image-grid-hover {
+    opacity: 1;
+  }
+  
+  .text {
+      color: #000;
+  }
+
+  .text h3 {
+      text-transform: lowercase;
+      font-family: 'Source Sans Pro';
+      color: #529afe;
+  }
+  
 
 /* Media Queries */
 @media (max-width: 425px) {
