--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="container-fluid d-none d-lg-block">
-                <hr id="hr-decoration">
+                <hr class="hr-decoration">
         </div>
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light">
@@ -125,6 +125,53 @@
 
     {% block content %}
     {% endblock %}
+
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <h4>Follow us</h4>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-12 d-flex justify-content-center">
+                        <ul class="list-inline list-unstyled">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/" target="_blank" aria-label="Go to Facebook"><i class="fab fa-facebook-square fa-lg"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/" target="_blank" aria-label="Go to Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://twitter.com/" target="_blank" aria-label="Go to Twitter"><i class="fab fa-twitter fa-lg"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href=""><h4>Contact</h4></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="">Back to top</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <hr class="hr-decoration">
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="text-center text-muted">© 2022 Surf the Wave</p>
+            </div>
+        </div>
+    </footer>
 
     {% block postloadjs %}
     {% endblock %}
