--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,7 @@
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Source+Sans+Pro:wght@600;700&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Inter:wght@300;400&family=Source+Sans+Pro:wght@600;700&display=swap" rel="stylesheet">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
@@ -111,7 +109,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col text-white">
-                <h5 class="headings">Free delivery on orders over £ {{ free_shipping_threshold }}!</h5>
+                <h5>Free delivery on orders over £ {{ free_shipping_threshold }}!</h5>
             </div>
         </div>
     </header>
