--- a/templates/base.html
+++ b/templates/base.html
@@ -136,13 +136,13 @@
                     <div class="col-12 d-flex justify-content-center">
                         <ul class="list-inline list-unstyled">
                             <li class="list-inline-item">
-                                <a href="https://www.facebook.com/" target="_blank" aria-label="Go to Facebook"><i class="fab fa-facebook-square fa-lg"></i></a>
+                                <a href="https://www.facebook.com/" target="_blank" aria-label="Go to Facebook" rel="noopener"><i class="fab fa-facebook-square fa-lg"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/" target="_blank" aria-label="Go to Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank" aria-label="Go to Instagram" rel="noopener"><i class="fab fa-instagram fa-lg"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://twitter.com/" target="_blank" aria-label="Go to Twitter"><i class="fab fa-twitter fa-lg"></i></a>
+                                <a href="https://twitter.com/" target="_blank" aria-label="Go to Twitter" rel="noopener"><i class="fab fa-twitter fa-lg"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -151,12 +151,12 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <a href=""><h4>Contact</h4></a>
+                        <a href="" aria-label="Link to go to contact form"><h4>Contact us</h4></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <a href="">Back to top</a>
+                        <a href="#" aria-label="Link to go to top of page">Back to top</a>
                     </div>
                 </div>
             </div>
