--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,10 +14,38 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col">
-               
+            <div class="col text-center">
+               <h2>Products</h2>
             </div>
         
+        </div>
+        <div class="row">
+            {% for product in products %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+                        {% if product.image %}
+                            <a href="">
+                                <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
+                            </a>
+                            
+                        {% else %}
+                            <a href="">
+                                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
+                            </a>
+                        {% endif %}
+                        <div class="card-body pb-0 text-center">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                        </div>
+                        <div class="card-footer bg-white border-0 text-center">
+                            <div class="row">
+                                <div class="col">
+                                    <p>£{{ product.price }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
