Add search query function to products view

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                 </a>
             </div>
             <div class="col-5 my-auto py-2">
-                <form method="GET" action="">
+                <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <div class="input-group-append">
                             <button type="submit" class="form-control border border-end-0">
