--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -6,7 +6,7 @@
             </div>
         </a>
         <div class="dropdown-menu" aria-labelledby="mobile-search">
-            <form method="GET" action="">
+            <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q" placeholder="I am looking for...">
                     <div class="input-group-append">
