--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,11 +15,27 @@
     <div class="container">
         <div class="row">
             <div class="col text-center">
-               <h2>Products</h2>
+                {% for c in current_categories %}
+                    {% if c.name == 'mens_wetsuits' and 'mens_footwear' and 'mens_accessories' %}
+                        <h2>Mens</h2>
+                    {% elif c.name == 'ladies_wetsuits' and 'ladies_footwear' and 'ladies_accessories' %}
+                        <h2>Ladies</h2>
+                    {% elif c.name == 'boys_wetsuits' and 'girls_wetsuits' and 'kids_footwear' and 'kids_accessories' %}
+                        <h2>Kids</h2>
+                    {% elif c.name == 'surfboards' and 'surf_equipment' %}
+                        <h2>Surf</h2>
+                    {% endif %}
+                {% endfor %}
+                {% for c in current_categories %}
+                    <a href="{% url 'products' %}?category={{ c.name }}" class="category-badge text-decoration-none">
+                        <span class="p-3 m-3 badge bg-light text-dark">{{ c.friendly_name }}</span>
+                    </a>
+                {% endfor %}
+                    
             </div>
         
         </div>
-        <div class="row">
+        <div class="row m-3">
             {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
