--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="">
+                            href="{% url 'view_basket' %}">
                             <div class="text-end">
                                 <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i><sup>{{ 0 }}</sup></div>
                             </div>
