Add basket context and delivery logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col text-white">
-                <h5>Free delivery on orders over £ {{ free_shipping_threshold }}!</h5>
+                <h5>Free delivery on orders over £{{ free_delivery_threshold }}!</h5>
             </div>
         </div>
     </header>
