--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -20,9 +20,9 @@
 
     </div>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mt-2">
 
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="col-12 col-md-6">
                 <div class="">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
@@ -35,11 +35,34 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-4">
                 <div>
-                    <h3 class="text-center mb-3">{{ product.name }}</h3>
+                    <h3 class="text-center m-3">{{ product.name }}</h3>
                     <p>£{{ product.price }}</p>
                     <p>{{ product.description }}</p>
+                    <form action="{% url 'add_to_basket' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-12">
+                                <p>Quantity:</p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input type="number" name="quantity" value="1" max="99" data_item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black mt-5">
+                                    <span>
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span>Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-blue mt-5" value="Add to basket">
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
