--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,15 @@
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                             href="{% url 'view_basket' %}">
                             <div class="text-end">
-                                <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i><sup>{{ 0 }}</sup></div>
+                                <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i>
+                                    <sup>
+                                        {% if product_count %}
+                                            {{ product_count|floatformat:0 }}
+                                        {% else %}
+                                            0
+                                        {% endif %}
+                                    </sup>
+                                </div>
                             </div>
                         </a>
                     </li>
