--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -21,8 +21,66 @@
       <div class="row">
           <div class="col">
               {% if basket_items %}
-                <div>
-                    {{ basket_items }}
+                <div class="table-responsive mx-auto">
+                    <table class="table table-sm">
+                        <thead>
+                            <tr>
+                                <th scope="col">Product Info</th>
+                                <th scope="col"></th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Qty</th>
+                                <th scope="col">Subtotal</th>
+                            </tr>
+                        </thead>
+
+                        {% for item in basket_items %}
+                            <tr>
+                                <td class="p-2 w-25">
+                                    {% if item.product.image %}
+                                    <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                    {% else %}
+                                    <img src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                    {% endif %}
+                                </td>
+                                <td class="py-2">
+                                    <p>{{ item.product.name }}</p>
+                                    <p>SKU: {{ item.product.sku|upper }}</p>
+                                </td>
+                                <td class="py-2">
+                                    <p>{{ item.product.price }}</p>
+                                </td>
+                                <td class="py-2">
+                                    <p>{{ item.quantity }}</p>
+                                </td>
+                                <td class="py-2">
+                                    <p>{{ item.product.price }}</p>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td>
+                                <h6>Basket Total: £{{ total|floatformat:2 }}</h6>
+                                <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                <h4>Grand Total: £{{ grand_total|floatformat:2 }}</h4>
+                                {% if free_delivery_delta > 0 %}
+                                    <p>
+                                        Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!
+                                    </p>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black btn-lg">
+                                    <span>
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span>Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-blue btn-lg" value="Add to basket">
+                            </td>
+                        </tr>
+                    </table>
                 </div>
               {% else %}
                 <p>Your basket is empty.</p>
