--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,7 +42,78 @@
                     <p>{{ product.description }}</p>
                     <form action="{% url 'add_to_basket' product.id %}" method="POST">
                         {% csrf_token %}
-                        <div class="row">
+                        <div class="form-row">
+                            {% if product.men_sizes %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_men_size'>
+                                        <option value="" selected>Please select a size</option>
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m">M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
+                            {% elif product.ladies_sizes %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_ladies_size'>
+                                        <option value="" selected>Please select a size</option>
+                                        <option value="6">6</option>
+                                        <option value="8">8</option>
+                                        <option value="10">10</option>
+                                        <option value="12">12</option>
+                                        <option value="14">14</option>
+                                        <option value="16">16</option>
+                                        <option value="18">18</option>
+                                    </select>
+                                </div>
+                            {% elif product.shoe_sizes %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_shoe_size'>
+                                        <option value="" selected>Please select a size</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                    </select>
+                                </div>
+                            {% elif product.kids_sizes %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_kids_size'>
+                                        <option value="" selected>Please select a size</option>
+                                        <option value="7-8">7-8</option>
+                                        <option value="9-10"></option>
+                                        <option value="11-12">11-12</option>
+                                        <option value="12-13">12-13</option>
+                                        <option value="14-15">14-15</option>
+                                        <option value="15-16">15-16</option>
+                                    </select>
+                                </div>
+                            {% elif product.kids_shoe_sizes %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_kids_shoe_size'>
+                                        <option value="" selected>Please select a size</option>
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m">M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
+                            {% else %}
+                            N/A
+                            {% endif %}
                             <div class="col-12">
                                 <p>Quantity:</p>
                                 <div class="form-group w-50">
