--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,7 +46,7 @@
                             {% if product.men_sizes %}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_men_size'>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
                                         <option value="" selected>Please select a size</option>
                                         <option value="xs">XS</option>
                                         <option value="s">S</option>
