Add quantity boxes to shopping basket

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,11 @@ a {
     border-radius: 0;
 }
 
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
 /* Navbar */
 #logo {
     font-family: 'Source Sans Pro';
