--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -122,7 +122,7 @@
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn btn-outline-black rounded-0" 
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
+                                                <span>
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
@@ -134,13 +134,15 @@
                                         <div class="input-group-append">
                                             <button class="increment-qty btn btn-outline-black rounded-0"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
+                                                <span>
                                                     <i class="fas fa-plus"></i>
                                                 </span>
                                             </button>
                                         </div>
+                                        {% if item.product.mens_sizes or item.product.ladies_sizes or item.product.shoe_sizes or item.product.kids_sizes or item.product.kids_shoe_sizes%}
+                                            <input type="hidden" name="product_size" value="{{ item.size }}">
+                                        {% endif %}
                                     </div>
-                                </div>
                                 </div>
                             </div>
                             <div class="col-12">
