--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -14,12 +14,12 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col mt-2">
+        <div class="col-11 offset-1 mt-2">
             <h2>Shopping Basket ({{ product_count }})</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12 col-md-8">
+        <div class="col-sm-12 col-md-6 offset-md-1">
             {% if basket_items %}
 
                 {% for item in basket_items %}
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-8 col-lg-10">
                         <div class="row">
-                            <div class="col-md-12 col-lg-7">
+                            <div class="col-md-12 col-lg-6">
                                 <h3 id="basket-item-title">{{ item.product.name }}</h3>
                                 <h4 class="basket-meta">Size:{% if item.product.men_sizes %}
                                     {{ item.size|upper }}
@@ -47,9 +47,9 @@
                                 <form class="form" action="" method="POST">
                                     {% csrf_token %}
                                     <div class="form-group">
-                                        <div class="input-group">
+                                        <div class="input-group quantity-input">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-sm btn-outline-black rounded-0"
+                                                <button class="decrement-qty btn btn-sm btn-outline-grey rounded-0"
                                                     data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-minus fa-sm"></i>
@@ -60,7 +60,7 @@
                                                 value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id  }}"
                                                 id="id_qty_{{ item.item_id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-sm btn-outline-black rounded-0"
+                                                <button class="increment-qty btn btn-sm btn-outline-grey rounded-0"
                                                     data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-plus fa-sm"></i>
@@ -90,24 +90,21 @@
                         </div>
             {% endif %}
         </div>
-        <div class="col-sm-12 col-md-4">
-            <h6>Basket Total: £{{ total|floatformat:2 }}</h6>
-            <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-            <h4>Grand Total: £{{ grand_total|floatformat:2 }}</h4>
+        <div class="col-sm-12 col-md-5 col-lg-4">
+            <section class="basket-summary">
+                <h5 class="basket-meta">Sub-total: <span class="float-end"> £{{ total|floatformat:2 }}</span></h6>
+                <h5 class="basket-meta">Delivery: <span class="float-end">£{{ delivery|floatformat:2 }}</span></h6>
+                <h5 class="mt-4">Grand Total: <span class="float-end">£{{ grand_total|floatformat:2 }}</span></h4>
+            </section>
             {% if free_delivery_delta > 0 %}
-                <p>
-                    Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!
-                </p>
-            {% endif %}
-    
-            <a href="{% url 'products' %}" class="btn btn-outline-black btn-lg">
-                <span>
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span>Keep Shopping</span>
+            <p>
+                Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!
+            </p>
+        {% endif %}
+            <input type="submit" class="btn btn-blue btn-lg basket-buttons" value="Proceed to Checkout">
+            <a href="{% url 'products' %}">
+                <button type="button" class="btn btn-outline-grey btn-lg basket-buttons">Continue shopping</button>
             </a>
-            <input type="submit" class="btn btn-blue btn-lg" value="Add to basket">
-    
         </div>
     </div>
 
