Update the update and remove items icons in shopping basket template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -217,6 +217,12 @@ a.category-badge > span.badge:hover {
     width: 100%;
     margin-bottom: 20px;
 }
+
+.update-link i,
+.remove-item i {
+    color: #666;
+    padding: 0 7px
+}
   
 
 /* Media Queries */
