--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -48,31 +48,31 @@
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="input-group quantity-input">
-                                            <div class="input-group-prepend">
+                                            <!-- <div class="input-group-prepend">
                                                 <button class="decrement-qty btn btn-sm btn-outline-grey rounded-0"
                                                     data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-minus fa-sm"></i>
                                                     </span>
                                                 </button>
-                                            </div>
+                                            </div> -->
                                             <input class="form-control form-control-sm qty_input" type="number" name="quantity"
                                                 value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id  }}"
                                                 id="id_qty_{{ item.item_id }}">
-                                            <div class="input-group-append">
+                                            <!-- <div class="input-group-append">
                                                 <button class="increment-qty btn btn-sm btn-outline-grey rounded-0"
                                                     data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
                                                     <span>
                                                         <i class="fas fa-plus fa-sm"></i>
                                                     </span>
                                                 </button>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </form>
-                                <a class="update-link text-info"><small>Update</small></a>
-                                <a class="remove-item text-danger float-right" id="remove_{{item.item_id }}"
-                                    data-size="{{ item.size }}"><small>Remove</small></a>
+                                <a class="update-link"><i class="fas fa-sync-alt mt-3" aria-label="Will update quantity of item in basket"></i></a>
+                                <a class="remove-item" id="remove_{{item.item_id }}"
+                                    data-size="{{ item.size }}" aria-label="Will remove quantity of item from basket"><i class="far fa-trash-alt"></i></a>
                             </div>
                             <div class="col-md-6 col-lg-2">
                                 <h4>£{{ item.product.price }}</h4>
