--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,122 +30,132 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div>
-                    <h3>{{ product.name }}</h3>
-                    <p>£{{ product.price }}</p>
-                    <form action="{% url 'add_to_basket' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            {% if product.men_sizes %}
-                                <div class="col-sm-12 col-md-6">
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
-                                        <option value="" selected>Choose size</option>
-                                        <option value="xs">XS</option>
-                                        <option value="s">S</option>
-                                        <option value="m">M</option>
-                                        <option value="l">L</option>
-                                        <option value="xl">XL</option>
-                                    </select>
-                                </div>
-                            {% elif product.ladies_sizes %}
-                                <div class="col-sm-12 col-md-6">
-                                    <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_ladies_size'>
-                                        <option value="" selected>Choose size</option>
-                                        <option value="6">6</option>
-                                        <option value="8">8</option>
-                                        <option value="10">10</option>
-                                        <option value="12">12</option>
-                                        <option value="14">14</option>
-                                        <option value="16">16</option>
-                                        <option value="18">18</option>
-                                    </select>
-                                </div>
-                            {% elif product.shoe_sizes %}
-                                <div class="col-sm-12 col-md-6">
-                                    <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_shoe_size'>
-                                        <option value="" selected>Choose size</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                    </select>
-                                </div>
-                            {% elif product.kids_sizes %}
-                                <div class="col-sm-12 col-md-6">
-                                    <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_kids_size'>
-                                        <option value="" selected>Choose size</option>
-                                        <option value="7-8">7-8</option>
-                                        <option value="9-10"></option>
-                                        <option value="11-12">11-12</option>
-                                        <option value="12-13">12-13</option>
-                                        <option value="14-15">14-15</option>
-                                        <option value="15-16">15-16</option>
-                                    </select>
-                                </div>
-                            {% elif product.kids_shoe_sizes %}
-                                <div class="col-sm-12 col-md-6">
-                                    <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_kids_shoe_size'>
-                                        <option value="" selected>Choose size</option>
-                                        <option value="xs">XS</option>
-                                        <option value="s">S</option>
-                                        <option value="m">M</option>
-                                        <option value="l">L</option>
-                                        <option value="xl">XL</option>
-                                    </select>
-                                </div>
-                            {% else %}
-                            N/A
-                            {% endif %}
-                            <div class="col-sm-12 col-md-6">
-                                <!--Quantity buttons and relating JavaScript used from Boutique Ado-->
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-outline-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span>
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-outline-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span>
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        {% if item.product.mens_sizes or item.product.ladies_sizes or item.product.shoe_sizes or item.product.kids_sizes or item.product.kids_shoe_sizes%}
-                                            <input type="hidden" name="product_size" value="{{ item.size }}">
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <input type="submit" class="btn btn-blue mt-5" value="Add to basket">
-                                <a href="{% url 'products' %}" class="btn btn-outline-grey mt-5">
-                                    <span>Continue shopping</span>
-                                </a>
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                <h3 class="mt-2">{{ product.name }}</h3>
+                <p class="basket-meta">{{ product.category.friendly_name }}</p>
+                <p>£{{ product.price }}</p>
+                <form action="{% url 'add_to_basket' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row mt-4">
+                        {% if product.men_sizes %}
+                        <div class="col-sm-12 col-md-6">
+                            <p>Size:</p>
+                            <select class="form-control form-select rounded-0" name="product_size" id='id_product_size'>
+                                <option value="" selected>Choose size</option>
+                                <option value="xs">XS</option>
+                                <option value="s">S</option>
+                                <option value="m">M</option>
+                                <option value="l">L</option>
+                                <option value="xl">XL</option>
+                            </select>
                         </div>
-                    </form>
-                </div>
+                        {% elif product.ladies_sizes %}
+                        <div class="col-sm-12 col-md-6">
+                            <p>Size:</p>
+                            <select class="form-control form-select rounded-0" name="product_size" id='id_ladies_size'>
+                                <option value="" selected>Choose size</option>
+                                <option value="6">6</option>
+                                <option value="8">8</option>
+                                <option value="10">10</option>
+                                <option value="12">12</option>
+                                <option value="14">14</option>
+                                <option value="16">16</option>
+                                <option value="18">18</option>
+                            </select>
+                        </div>
+                        {% elif product.shoe_sizes %}
+                        <div class="col-sm-12 col-md-6">
+                            <p>Size:</p>
+                            <select class="form-control form-select rounded-0" name="product_size" id='id_shoe_size'>
+                                <option value="" selected>Choose size</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                            </select>
+                        </div>
+                        {% elif product.kids_sizes %}
+                        <div class="col-sm-12 col-md-6">
+                            <p>Size:</p>
+                            <select class="form-control form-select rounded-0" name="product_size" id='id_kids_size'>
+                                <option value="" selected>Choose size</option>
+                                <option value="7-8">7-8</option>
+                                <option value="9-10"></option>
+                                <option value="11-12">11-12</option>
+                                <option value="12-13">12-13</option>
+                                <option value="14-15">14-15</option>
+                                <option value="15-16">15-16</option>
+                            </select>
+                        </div>
+                        {% elif product.kids_shoe_sizes %}
+                        <div class="col-sm-12 col-md-6">
+                            <p>Size:</p>
+                            <select class="form-control form-select rounded-0" name="product_size"
+                                id='id_kids_shoe_size'>
+                                <option value="" selected>Choose size</option>
+                                <option value="xs">XS</option>
+                                <option value="s">S</option>
+                                <option value="m">M</option>
+                                <option value="l">L</option>
+                                <option value="xl">XL</option>
+                            </select>
+                        </div>
+                        {% else %}
+                        N/A
+                        {% endif %}
+                        <div class="col-sm-12 col-md-6 mt-4">
+                            <p>Quantity:</p>
+                            <!--Quantity buttons and relating JavaScript used from Boutique Ado-->
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-outline-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span>
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-outline-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span>
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    {% if item.product.mens_sizes or item.product.ladies_sizes or item.product.shoe_sizes or item.product.kids_sizes or item.product.kids_shoe_sizes%}
+                                    <input type="hidden" name="product_size" value="{{ item.size }}">
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 mt-4">
+                            <input type="submit" class="btn btn-blue basket-buttons" value="Add to basket">
+
+                            <a href="{% url 'products' %}" class="btn btn-outline-grey basket-buttons">
+                                <span>Continue shopping</span>
+                            </a>
+
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-12">
+                <h4>Information</h4>
+                <p>SKU: {{ product.sku }}</p>
+                <p>{{ product.description }}</p>
+                <p>Features</p>
             </div>
         </div>
 
